--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-server": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.2",
+    "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "angular-oauth2-oidc": "^17.0.2",
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
     "express": "^4.18.2",
