--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@angular/ssr": "^17.1.2",
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@types/dotenv": "^8.2.0",
     "angular-oauth2-oidc": "^17.0.2",
     "bootstrap": "^5.3.3",
     "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
