--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.2",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
-    "express": "^4.18.2",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.6.2",
+    "mongoose": "^8.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
